# sonobus

./: .gitignore  CMakeLists.txt  README.md  find.sh  setupcmakewin.sh
.github/workflows/: build-windows.yml  build.yml  copilot-setup-steps.yml  linux-build.yml  macos-build.yml  windows-build.yml
Source/: ChannelGroupsView.cpp  ChannelGroupsView.h  MonitorDelayView.h  OSCController.cpp  OSCController.h  OSCManager.cpp  OSCManager.h  OptionsView.cpp  OptionsView.h  PeersContainerView.cpp  SonobusPluginEditor.cpp  SonobusPluginEditor.h  SonobusPluginProcessor.cpp  SonobusPluginProcessor.h  VersionInfo.cpp
doc/: OSC_COMMANDS.md
tests/: oscsend.sh  oscsend_comprehensive.sh
util/: README_SIMPLE_OSC.md  README_TOSC.md  SonoBusMendeni.tosc  install-macos-vst3.sh  simple.tosc  simple_osc.tosc  sonobus_comprehensive.tosc  sonobus_osc_reference.json  trim.sh  trim.sox.pl
